Fixed Small Alignment problem on Slanted Line.
There was a small problem that if there was not enough content on a slanted line, then the right side of the div would be white.

--- a/css/header.css
+++ b/css/header.css
@@ -56,7 +56,7 @@
 
 .slantedLineOption:after {
   background: inherit;
-  bottom: -135px;
+  bottom: -130px;
   content: '';
   display: block;
   height: 50%;
